[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common-lib"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.11.7",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
]

[project.optional-dependencies]
postgres = [
    "asyncpg==0.30.0",
]
rabbitmq = [
    "aio-pika==9.5.5",
]
clickhouse = [
    "asynch==0.3.0",
]
http = [
    "aiohttp[speedups]==3.12.14",
]

